--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EmpleadosDB.cs" />
     <Compile Include="TiposProductoDB.cs" />
     <Compile Include="ProductoDB.cs" />
     <Compile Include="AccesoDatos.cs" />
