finalizado de ABMMarcasProductos

--- a/TPC_GROSS_LAINO_CHAPARRO/TPC_GROSS_LAINO_CHAPARRO.csproj
+++ b/TPC_GROSS_LAINO_CHAPARRO/TPC_GROSS_LAINO_CHAPARRO.csproj
@@ -108,6 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ABMEmpleado.aspx" />
+    <Content Include="ABMMarcasProducto.aspx" />
     <Content Include="ABMMarcasVehiculo.aspx" />
     <Content Include="ABMProductos.aspx" />
     <Content Include="ABMTiposProducto.aspx" />
@@ -273,6 +274,13 @@
     </Compile>
     <Compile Include="ABMEmpleado.aspx.designer.cs">
       <DependentUpon>ABMEmpleado.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="ABMMarcasProducto.aspx.cs">
+      <DependentUpon>ABMMarcasProducto.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="ABMMarcasProducto.aspx.designer.cs">
+      <DependentUpon>ABMMarcasProducto.aspx</DependentUpon>
     </Compile>
     <Compile Include="ABMMarcasVehiculo.aspx.cs">
       <DependentUpon>ABMMarcasVehiculo.aspx</DependentUpon>
