--- a/Dominio/Dominio.csproj
+++ b/Dominio/Dominio.csproj
@@ -44,6 +44,7 @@
     <Compile Include="TipoServicio.cs" />
     <Compile Include="MarcaVehiculo.cs" />
     <Compile Include="Servicio.cs" />
+    <Compile Include="Usuario.cs" />
     <Compile Include="Vehiculo.cs" />
     <Compile Include="Empleado.cs" />
     <Compile Include="Cliente.cs" />
