--- a/Negocio/Negocio.csproj
+++ b/Negocio/Negocio.csproj
@@ -46,6 +46,7 @@
     <Compile Include="ProductoDB.cs" />
     <Compile Include="AccesoDatos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UsuarioDB.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Dominio\Dominio.csproj">
